# geo-assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py
app/routes/: areas.py  locations.py  spatial.py
