[tool.poetry]
name = "geo"
version = "0.1.0"
description = ""
authors = ["ShreenidhiHD <shreenidhihaagalagodu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.14"
sqlmodel = "^0.0.24"
uvicorn = "^0.35.0"
psycopg2-binary = "^2.9.9"
geoalchemy2 = "^0.14.7"
shapely = "^2.0.6"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
